# AgentTuring

./: .dockerignore  .easter.egg.hi  .env.example  .gitignore  .gitleaks.toml  .kubeconfig-docker  .mutmut-config.ini  .pre-commit-config.yaml  .semgrep.yml  .vulture_whitelist.py  ARCHITECTURE.md  AUDIT-REPORT.md  AUDIT.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_STATUS.md  LICENSE  ONBOARDING.md  PROBLEMS_ACCEPTANCE_SOLUTIONS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_WEEK1-2.md  TEST_CONTRACTS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  litellm_openapi.json  openwebui-custom.css  project_turing.research.md  pyproject.toml
.claude/: activity.jsonl  settings.json
.github/: ci-versions.env
.github/workflows/: ci-autofix.yml  ci.yml  cleanroom-lint.yml  deploy.yml  drift-check.yml  gatekeeper-review.yml  release.yml
agents/: PREAMBLE.md
agents/arbiter/: SOUL.md  agent.yaml  agent_card.json
agents/archie/: SOUL.md  agent.yaml  agent_card.json
agents/artificer/: SOUL.md  agent.yaml  agent_card.json
agents/auditor/: RULES.md  SOUL.md  agent.yaml  agent_card.json
agents/davinci/: RULES.md  SOUL.md  agent.yaml  agent_card.json
agents/default/: SOUL.md  agent.yaml  agent_card.json
agents/fabulist/: RULES.md  SOUL.md  agent.yaml  agent_card.json
agents/frank/: SOUL.md  agent.yaml  agent_card.json
config/: example.yaml  tool_policy.csv  tool_policy_model.conf
docs/: HELM-CHART-REFERENCE.md  INSTALL-AKS.md  SECURITY_FINDINGS.md  autonoetic-self.md  blue-team-training-spec.md  code-smell-catalog-2026-04-23.md  decommission-kind-cluster.md  partial-feature-spec-register.md  test-audit-2026-04-17.csv  test-quality-audit-and-ci-gate-proposal.md  test-quality-remediation-plan.md
docs/adr/: README.md  (+32 more)
migrations/: 001_initial.sql  002_persistence_tables.sql  003_users_table.sql  004_agent_trust_tiers.sql  005_marketplace_delist.sql  006_agent_typed_columns.sql  007_outcome_tokens.sql  008_user_profiles.sql  009_power_chips.sql  010_dual_wallets.sql  011_seed_admin.sql  012_learnings_outcome_and_rca.sql
scripts/: cleanroom-lint.sh  e2e.sh  setup-branch-protection.sh  stronghold-mcp-stdio  test.sh
specs/: TURING-CONSOLE-README.md  archie-property-gen.yaml  complexity-triage.yaml  phase1-pipeline-wiring.yaml  phase2-verifier.yaml  phase3-plan-caching.yaml  phase4-agent-configs.yaml  prompt-caching.yaml  quartermaster-spec-emission.yaml  rca-structured-output.yaml  spec-enriched-prompts.yaml  turing-chat-streaming.yaml  turing-memory-consolidator.yaml  turing-memory-crud-endpoints.yaml  turing-notebook-live-vault.yaml  turing-obsidian-store.yaml  turing-wordpress-publishing.yaml
tests/: conftest.py  factories.py  fakes.py  test_coverage_final.py  test_coverage_misc.py  test_deep_edge_cases.py  test_deep_edges_phase2.py  test_logging.py  test_new_modules.py  test_new_modules_2.py  test_security_regressions.py  test_triggers_coverage.py  test_triggers_extended.py  test_triggers_spec.py  test_types.py
(+1121 files in other folders)
